--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -5,6 +5,8 @@
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
@@ -47,6 +49,7 @@
                                 Comenzar alquilacion
                             </button>
                         </div>
+
                     </form>
                 </div>
 
@@ -65,24 +68,18 @@
         </div>
     </div>
 </main>
-<script>
+<script th:inline="javascript">
 var cantidadHorasInput = document.getElementById("cantidadHoras");
 var precioFinalOutPut= document.getElementById("precioFinal");
 var precioPorHora =  [[${bicicleta.getPrecioAlquilerPorHora()}]];
-
+var idPreferencia = "[[${idPreferencia}]]";
 
 cantidadHoras.addEventListener("input", function () {
     var cantidadHoras = parseFloat(cantidadHorasInput.value);
-
-console.log(cantidadHoras);
-console.log(precioPorHora);
-
     var precioFinal = cantidadHoras * precioPorHora;
-
-console.log(precioFinal);
-
     precioFinalOutPut.innerHTML   = precioFinal.toFixed(2);
 });
+
 </script>
 
 </body>
