--- a/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
@@ -17,6 +17,9 @@
 <div class="flex">
     <div id="map" class="w-3/4 h-[90vh]"></div>
     <div class="w-1/4 h-[90vh] max-h-[90vh] overflow-y-auto flex flex-col items-center bg-white py-3 border-2 rounded-sm">
+        <div>
+            <span th:text="${idPreferencia}"></span>
+        </div>
         <h1 class="text-center text-2xl font-bold py-2">Bicicleterías más cercanas</h1>
         <div th:each="propietario, index : ${propietarios}" class="w-[95%] border-2 rounded m-2 py-2 px-3">
             <div class="p-2 m-1 text-sm text-blue-800 rounded-lg bg-blue-50" role="alert">
@@ -26,13 +29,16 @@
             <a th:href="@{/propietario/{id}/bicicletas(id=${propietario.id})}"
                class="text-blue-500 hover:text-blue-800">Ver bicicletas</a>
         </div>
+
+
+
     </div>
 </div>
 <script th:inline="javascript">
     const userLatitude = [[${latitudActual}]];
     const userLongitude = [[${longitudActual}]];
     const propietarios = [[${propietarios}]];
-
+    console.log([[${idPreferencia}]]);
     let map;
 
     function initializeMap() {
