--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -56,7 +56,7 @@
                             </button>
                         </div>
 
-                        <div class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+                        <div class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg"
                              role="alert"
                              th:if="${param.error != null}">
                             <span class="font-medium" th:text="${param.error}"></span>
