--- a/src/main/webapp/WEB-INF/views/thymeleaf/partials/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partials/nav.html
@@ -1,6 +1,7 @@
 <nav class="w-full border-gray-200 bg-gray-50">
     <div class="flex flex-col sm:flex-row items-center justify-between mx-auto p-4">
-        <div class="w-full md:block md:w-auto">
+        <div class="w-full flex items-center md:w-auto">
+            <img alt="logo" class="w-20 mr-5" src="https://svgshare.com/i/10Hn.svg">
             <ul class="flex font-medium mt-4 md:space-x-8 md:mt-0 md:border-0">
                 <li>
                     <a aria-current="page"
