--- a/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
@@ -44,6 +44,7 @@
         </div>
     </div>
 </div>
+<div th:replace="~{components/footer}"></div>
 <script th:inline="javascript">
     const opcionesRuta = document.getElementsByClassName('opcion-ruta');
 
