--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -98,6 +98,7 @@
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
     <div class="w-[360px] xl:w-[760px] py-5 sm:py-10 flex flex-col items-center bg-slate-50 rounded">
+        <img alt="logo" class="w-20 my-2" src="https://svgshare.com/i/10Hn.svg">
         <h1 class="mb-6 text-3xl font-bold text-gray-900">Nuevo Usuario</h1>
         <form action="#" class="w-full" method="POST" th:action="@{/registrarme}"
               th:object="${datosUsuario}">
