--- a/src/main/webapp/WEB-INF/views/thymeleaf/bicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/bicicletas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="absolute w-[90%] min-h-[90%] pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav :: nav}"></div>
         <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Bicicletas disponibles</h1>
         <div th:if="${#lists.isEmpty(bicicletas)}">
