--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="w-[90%] min-h-[90%] my-6 pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav :: nav}"></div>
         <div class="grid grid-cols-1 md:grid-rows-[2fr_auto] gap-4 md:grid-cols-2">
             <div class="grid grid-cols-1 md:grid-cols-2 md:col-start-1 md:col-end-3">
@@ -71,6 +71,7 @@
                 </div>
             </div>
         </div>
+        <div th:replace="~{components/footer}"></div>
     </div>
 </main>
 <script th:inline="javascript">
