--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -2,42 +2,43 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Iniciar sesión</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
     <div class="w-[360px] xl:w-[480px] py-5 sm:py-10 flex flex-col items-center bg-slate-50 rounded">
+        <img alt="logo" class="w-20 my-2" src="https://svgshare.com/i/10Hn.svg">
         <h1 class="mb-6 text-3xl font-bold text-gray-900">Iniciar sesión</h1>
-        <form class="w-full" action="#" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
+        <form action="#" class="w-full" method="POST" th:action="@{/validar-login}" th:object="${datosLogin}">
             <div class="w-80 mx-auto mb-6">
-                <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                <input th:field="*{email}" id="email" type="email"
-                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
+                <label class="block mb-2 text-sm font-medium text-gray-900" for="email">Email</label>
+                <input autocomplete="off" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" id="email"
+                       required
+                       th:field="*{email}" type="email"/>
             </div>
             <div class="w-80 mx-auto mb-6">
-                <label for="password"
-                       class="block mb-2 text-sm font-medium text-gray-900">Contraseña</label>
-                <input th:field="*{password}" type="password" id="password"
-                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                       autocomplete="off" required/>
+                <label class="block mb-2 text-sm font-medium text-gray-900"
+                       for="password">Contraseña</label>
+                <input autocomplete="off" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" id="password"
+                       required
+                       th:field="*{password}" type="password"/>
             </div>
-            <div th:if="${error != null}"
-                 class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
-                 role="alert">
-                <span th:text="${error}" class="font-medium"></span>
+            <div class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+                 role="alert"
+                 th:if="${error != null}">
+                <span class="font-medium" th:text="${error}"></span>
             </div>
             <div class="text-center">
-                <button type="submit"
-                        class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                <button class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center"
+                        type="submit">
                     Ingresar
                 </button>
             </div>
         </form>
-        <a href="nuevo-usuario"
-           class="w-72 sm:w-80 mt-2 py-2.5 px-5 text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200">
+        <a class="w-72 sm:w-80 mt-2 py-2.5 px-5 text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200"
+           href="nuevo-usuario">
             Registrarme
         </a>
     </div>
