--- a/src/main/webapp/WEB-INF/views/thymeleaf/mis-alquileres.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mis-alquileres.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="absolute w-[90%] min-h-[90%] pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav}"></div>
         <div class="w-full my-5 sm:my-0 sm:h-full sm:flex sm:flex-col sm:items-center sm:justify-center">
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900 text-center">Mis Alquileres</p>
@@ -16,7 +16,7 @@
                 <div th:if="${#lists.isEmpty(alquileres)}">
                     <p class="font-medium text-gray-900 text-center text-lg">No tenés alquileres registrados</p>
                 </div>
-                <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+                <div class="m-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                     <div class="group relative" th:each="alquiler: ${alquileres}">
                         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
                             <img alt="Bicicleta"
@@ -34,14 +34,13 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div th:replace="~{components/footer}"></div>
     </div>
 </main>
 <script th:inline="javascript">
     Array.from(document.getElementsByClassName('fechaAlquiler')).forEach(element => {
         const fecha = element.getAttribute('data');
-        const fechaFormateada = formatearFecha(fecha);
-        element.innerText = fechaFormateada;
+        element.innerText = formatearFecha(fecha);
     });
 
     function formatearFecha(fecha) {
