--- a/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="mt-5 w-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="w-[90%] min-h-[90%] my-6 pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav}"></div>
         <div class="w-full my-5 sm:my-0 sm:h-full sm:flex sm:flex-col sm:items-center sm:justify-center">
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900 text-center">Bicicletas</p>
@@ -19,7 +19,8 @@
                 </div>
                 <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletasUso}">
                     <div class="max-w-[320px] pb-4">
-                        <img  alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
+                        <img alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid"
+                             style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
@@ -51,7 +52,8 @@
                 </div>
                 <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletasRotas}">
                     <div class="max-w-[320px] pb-4">
-                        <img  alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
+                        <img alt="" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid"
+                             style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
@@ -84,7 +86,8 @@
                 </div>
                 <div class="m-2 border border-gray-300 rounded-lg" th:each="bicicleta : ${bicicletas}">
                     <div class="max-w-[320px] pb-4">
-                        <img  alt="" class="max-w-64 max-h-64 rounded-t-lg img-fluid" style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
+                        <img alt="" class="max-w-64 max-h-64 rounded-t-lg img-fluid"
+                             style="width: 400px; height: 300px;" th:src="${bicicleta.urlImagen}"/>
                         <div class="p-2">
                             <div class="w-full my-1">
                                 <p class="font-semi-bold text-gray-800">Descripción: </p>
@@ -109,6 +112,7 @@
                 </div>
             </div>
         </div>
+        <div th:replace="~{components/footer}"></div>
     </div>
 </main>
 </body>
