--- a/src/main/webapp/WEB-INF/views/thymeleaf/registrar-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/registrar-bicicleta.html
@@ -2,21 +2,21 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <title>Registrar bicicleta</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="w-[90%] min-h-[90%] my-6 pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav}"></div>
         <div class="my-5 sm:my-0 sm:h-full sm:flex sm:flex-col sm:items-center sm:justify-center">
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900">Registrá tu bicicleta</p>
-            <form class="w-full" action="#" th:action="@{/alta-bicicleta}" th:object="${datosBicicleta}" method="POST">
+            <form action="#" class="w-full" method="POST" th:action="@{/alta-bicicleta}" th:object="${datosBicicleta}">
                 <div class="w-80 sm:w-96 mx-auto mb-6">
-                    <label for="estadoBicicleta"
-                           class="block mb-2 text-sm font-medium text-gray-900">Estado</label>
-                    <select th:field="*{estadoBicicleta}" id="estadoBicicleta" class="w-full p-2.5">
+                    <label class="block mb-2 text-sm font-medium text-gray-900"
+                           for="estadoBicicleta">Estado</label>
+                    <select class="w-full p-2.5" id="estadoBicicleta" th:field="*{estadoBicicleta}">
                         <option value="">Estado de la bicicleta</option>
                         <option th:value="DISPONIBLE">Disponible</option>
                         <option th:value="EN_USO">En uso</option>
@@ -24,40 +24,48 @@
                     </select>
                 </div>
                 <div class="w-80 sm:w-96 mx-auto mb-6">
-                    <label for="precioVenta" class="block mb-2 text-sm font-medium text-gray-900">Precio de Venta</label>
-                    <input th:field="*{precioVenta}" id="precioVenta"
+                    <label class="block mb-2 text-sm font-medium text-gray-900" for="precioVenta">Precio de
+                        Venta</label>
+                    <input autocomplete="off"
                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                           autocomplete="off" type="number" required/>
+                           id="precioVenta"
+                           required th:field="*{precioVenta}" type="number"/>
                 </div>
                 <div class="w-80 sm:w-96 mx-auto mb-6">
-                    <label for="precioAlquilerPorHora" class="block mb-2 text-sm font-medium text-gray-900">Precio de Alquiler por Hora</label>
-                    <input id="precioAlquilerPorHora" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" readonly/>
+                    <label class="block mb-2 text-sm font-medium text-gray-900" for="precioAlquilerPorHora">Precio de
+                        Alquiler por Hora</label>
+                    <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           id="precioAlquilerPorHora"
+                           readonly/>
                 </div>
                 <div class="w-80 sm:w-96 mx-auto mb-6">
-                    <label for="descripcion"
-                           class="block mb-2 text-sm font-medium text-gray-900">Descripción</label>
-                    <textarea th:field="*{descripcion}" id="descripcion"
+                    <label class="block mb-2 text-sm font-medium text-gray-900"
+                           for="descripcion">Descripción</label>
+                    <textarea autocomplete="off"
                               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                              autocomplete="off" rows="4" required></textarea>
+                              id="descripcion"
+                              required rows="4" th:field="*{descripcion}"></textarea>
                 </div>
                 <div class="w-80 sm:w-96 mx-auto mb-6">
-                    <label for="urlImg"
-                           class="block mb-2 text-sm font-medium text-gray-900">Url Imagen</label>
-                    <input type="text" id="urlImagen" name="urlImagen"><br><br>
+                    <label class="block mb-2 text-sm font-medium text-gray-900"
+                           for="urlImagen">Url Imagen</label>
+                    <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" id="urlImagen" name="urlImagen"
+                           type="text">
                 </div>
-                <div th:if="${error != null}"
-                     class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50"
-                     role="alert">
-                    <span th:text="${error}" class="font-medium"></span>
+                <div class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50"
+                     role="alert"
+                     th:if="${error != null}">
+                    <span class="font-medium" th:text="${error}"></span>
                 </div>
                 <div class="text-center">
-                    <button type="submit"
-                            class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                    <button class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center"
+                            type="submit">
                         Registrar
                     </button>
                 </div>
             </form>
         </div>
+        <div th:replace="~{components/footer}"></div>
     </div>
 </main>
 <script type="text/javascript">
@@ -66,7 +74,7 @@
     var precioAlquilerPorHoraInput = document.getElementById("precioAlquilerPorHora");
 
     // Agrega un evento de escucha para el campo de precio de venta
-    precioVentaInput.addEventListener("input", function() {
+    precioVentaInput.addEventListener("input", function () {
         // Obtiene el valor del precio de venta
         var precioVenta = parseFloat(precioVentaInput.value);
 
