--- a/src/main/webapp/WEB-INF/views/thymeleaf/resenas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/resenas.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="w-[90%] min-h-[80%] pt-3 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav :: nav}"></div>
         <p class="mt-5 sm:mt-10 text-center text-3xl font-bold text-gray-900">Reseñas de la bicicleta</p>
         <div class="flex flex-col sm:flex-row">
             <img alt="Bicicleta"
                  class="w-64 sm:w-96 h-fit my-5 sm:my-10 sm:mx-3 h-auto rounded-lg"
-                 src="https://www.brooklynbicycleco.com/cdn/shop/files/Screenshot_2023-03-09_193412.jpg?v=1678408476">
+                 th:src="${bicicleta.urlImagen}">
             <div class="flex flex-col items-center sm:mx-3 sm:my-10">
                 <div class="w-64 sm:w-96 shadow-sm rounded-md my-1 p-2" th:each="resena : ${resenas}">
                     <div class="flex items-center gap-[16px]">
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </div>
+        <div th:replace="~{components/footer}"></div>
     </div>
 </main>
 </body>
